<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#696969"/>

    <TextView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_data"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/pressure_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_137"
            android:textSize="26sp"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/between"/>

        <TextView
            android:id="@+id/between"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   /   "
            android:textSize="26sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/pressure_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_71"
            android:textSize="26sp"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/between"/>

        <ImageView
            android:id="@+id/heart"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_monitor_heart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/pulse"
            android:contentDescription="@string/image_monitor_heart" />

        <TextView
            android:id="@+id/pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_59"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>